Regression: Dragging an image from the Image Editor into any Node Editor no longer works in 3.3 #99847

Closed
opened 2022-07-19 19:45:54 +02:00 by dupoxy · 6 comments
Contributor

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-14.0.32 355.11.11.10.10.143

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-19 14:07, hash: 2f834bfc14.
Worked: 3.2.1

first bad commit.: b0da080c2c

Short description of error
Dropping image into shader editor fail. The file browser opens instead of creating an image texture node with the image.
Tested and confirmed the same issue exists in the compositor and geonode editor as well.

Exact steps for others to reproduce the error

**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-14.0.32 355.11.11.10.10.143 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-19 14:07, hash: `2f834bfc14`. Worked: 3.2.1 first bad commit.: b0da080c2c **Short description of error** Dropping image into shader editor fail. The file browser opens instead of creating an image texture node with the image. Tested and confirmed the same issue exists in the compositor and geonode editor as well. **Exact steps for others to reproduce the error** - open file - Drag and drop image from image editor into shader editor. [box.blend](https://archive.blender.org/developer/F13301113/box.blend) [0001-0913.mp4](https://archive.blender.org/developer/F13301126/0001-0913.mp4)
Author
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Member

Added subscribers: @JulianEisel, @EAW

Added subscribers: @JulianEisel, @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm that this works in 3.2.1 release and is broken in 3.3.0 Alpha, branch: master, commit date: 2022-07-19 23:50, hash: 2551cf9087

@JulianEisel mind taking a look?

I can confirm that this works in 3.2.1 release and is broken in 3.3.0 Alpha, branch: master, commit date: 2022-07-19 23:50, hash: 2551cf908732 @JulianEisel mind taking a look?
Evan Wilson changed title from dropping image into shader editor fail to Regression: Dragging an image from the Image Editor into any Node Editor no longer works in 3.3 2022-07-20 06:30:58 +02:00

This issue was referenced by a814c7091b

This issue was referenced by a814c7091b9a22067517b24b1f9c2de366717cbd
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2022-07-20 14:54:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99847
No description provided.