Fix T99847: Dragging image from Image Editor to Node Editor broken

Oversight in b0da080c2cb9. The `session_uuid` operator property wouldn't
be checked by the invoke callback, and if neither the `filepath` nor the
`name` property were set, the File Browser would open.